--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -94,5 +94,35 @@
       "step4": "ابحث عن ملف تعريف الارتباط المسمى \"arl\"",
       "step5": "انسخ قيمته"
     }
+  },
+  "onboarding": {
+    "skip": "تخطي",
+    "next": "التالي",
+    "previous": "السابق",
+    "start": "ابدأ",
+    "welcome": {
+      "title": "مرحباً بك في Music Stream Match!",
+      "description": "أسهل طريقة لنقل قوائم التشغيل المفضلة لديك بين خدمات البث الموسيقي."
+    },
+    "transfer": {
+      "title": "كيف يعمل",
+      "description": "نقل قوائم التشغيل بسيط وسريع:",
+      "feature1": "اختر خدمة المصدر وقائمة التشغيل",
+      "feature2": "اختر خدمة البث المستهدفة",
+      "feature3": "ابدأ النقل وانتظر حتى الاكتمال"
+    },
+    "providers": {
+      "title": "الخدمات المدعومة",
+      "description": "انقل قوائم التشغيل بين هذه المنصات الشائعة:"
+    },
+    "invitation": {
+      "title": "رمز الدعوة مطلوب",
+      "description": "لاستخدام التطبيق، تحتاج إلى رمز دعوة. يمكنك الحصول عليه من المسؤول أو استخدام رمز تجريبي.",
+      "demo": "جربه مع الرمز التجريبي:"
+    },
+    "ready": {
+      "title": "جاهز للبدء!",
+      "description": "أدخل رمز الدعوة الخاص بك وابدأ في نقل مجموعاتك الموسيقية."
+    }
   }
 }
