--- a/src/i18n/translations/bn.json
+++ b/src/i18n/translations/bn.json
@@ -94,5 +94,35 @@
       "step4": "\"arl\" নামের কুকি খুঁজুন",
       "step5": "এর মান কপি করুন"
     }
+  },
+  "onboarding": {
+    "skip": "এড়িয়ে যান",
+    "next": "পরবর্তী",
+    "previous": "আগের",
+    "start": "শুরু করুন",
+    "welcome": {
+      "title": "Music Stream Match-এ আপনাকে স্বাগতম!",
+      "description": "মিউজিক স্ট্রিমিং সেবাগুলির মধ্যে আপনার প্রিয় প্লেলিস্ট স্থানান্তর করার সবচেয়ে সহজ উপায়।"
+    },
+    "transfer": {
+      "title": "এটি কীভাবে কাজ করে",
+      "description": "প্লেলিস্ট স্থানান্তর করা সহজ এবং দ্রুত:",
+      "feature1": "উৎস সেবা এবং প্লেলিস্ট নির্বাচন করুন",
+      "feature2": "লক্ষ্য স্ট্রিমিং সেবা নির্বাচন করুন",
+      "feature3": "স্থানান্তর শুরু করুন এবং সম্পূর্ণ হওয়ার জন্য অপেক্ষা করুন"
+    },
+    "providers": {
+      "title": "সমর্থিত সেবাগুলি",
+      "description": "এই জনপ্রিয় স্ট্রিমিং প্ল্যাটফর্মগুলির মধ্যে প্লেলিস্ট স্থানান্তর করুন:"
+    },
+    "invitation": {
+      "title": "আমন্ত্রণ কোড প্রয়োজন",
+      "description": "অ্যাপটি ব্যবহার করতে, আপনার একটি আমন্ত্রণ কোড প্রয়োজন। আপনি এটি প্রশাসকের কাছ থেকে পেতে পারেন বা ডেমো কোড ব্যবহার করতে পারেন।",
+      "demo": "ডেমো কোড দিয়ে চেষ্টা করুন:"
+    },
+    "ready": {
+      "title": "শুরু করতে প্রস্তুত!",
+      "description": "আপনার আমন্ত্রণ কোড দিন এবং আপনার সঙ্গীত সংগ্রহ স্থানান্তর করা শুরু করুন।"
+    }
   }
 }
