--- a/src/i18n/translations/ja.json
+++ b/src/i18n/translations/ja.json
@@ -94,5 +94,35 @@
       "step4": "\"arl\"という名前のcookieを見つける",
       "step5": "その値をコピー"
     }
+  },
+  "onboarding": {
+    "skip": "スキップ",
+    "next": "次へ",
+    "previous": "戻る",
+    "start": "始める",
+    "welcome": {
+      "title": "Music Stream Matchへようこそ！",
+      "description": "音楽ストリーミングサービス間でお気に入りのプレイリストを転送する最も簡単な方法です。"
+    },
+    "transfer": {
+      "title": "使い方",
+      "description": "プレイリストの転送は簡単で高速です：",
+      "feature1": "ソースサービスとプレイリストを選択",
+      "feature2": "転送先のストリーミングサービスを選択",
+      "feature3": "転送を開始し、完了を待つ"
+    },
+    "providers": {
+      "title": "対応サービス",
+      "description": "これらの人気ストリーミングプラットフォーム間でプレイリストを転送："
+    },
+    "invitation": {
+      "title": "招待コードが必要です",
+      "description": "アプリを使用するには招待コードが必要です。管理者から取得するか、デモコードを使用できます。",
+      "demo": "デモコードで試す："
+    },
+    "ready": {
+      "title": "準備完了！",
+      "description": "招待コードを入力して、音楽コレクションの転送を始めましょう。"
+    }
   }
 }
