--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -94,5 +94,35 @@
       "step4": "Найдите cookie с названием \"arl\"",
       "step5": "Скопируйте его значение"
     }
+  },
+  "onboarding": {
+    "skip": "Пропустить",
+    "next": "Далее",
+    "previous": "Назад",
+    "start": "Начать",
+    "welcome": {
+      "title": "Добро пожаловать в Music Stream Match!",
+      "description": "Самый простой способ перенести любимые плейлисты между музыкальными стриминговыми сервисами."
+    },
+    "transfer": {
+      "title": "Как это работает",
+      "description": "Перенос плейлистов прост и быстр:",
+      "feature1": "Выберите исходный сервис и плейлист",
+      "feature2": "Выберите целевой стриминговый сервис",
+      "feature3": "Начните перенос и дождитесь завершения"
+    },
+    "providers": {
+      "title": "Поддерживаемые сервисы",
+      "description": "Переносите плейлисты между этими популярными платформами:"
+    },
+    "invitation": {
+      "title": "Требуется код приглашения",
+      "description": "Для использования приложения вам нужен код приглашения. Вы можете получить его у администратора или использовать демо-код.",
+      "demo": "Попробуйте с демо-кодом:"
+    },
+    "ready": {
+      "title": "Готовы начать!",
+      "description": "Введите код приглашения и начинайте перенос ваших музыкальных коллекций."
+    }
   }
 }
