--- a/src/i18n/translations/hi.json
+++ b/src/i18n/translations/hi.json
@@ -94,5 +94,35 @@
       "step4": "\"arl\" नाम की कुकी खोजें",
       "step5": "उसका मान कॉपी करें"
     }
+  },
+  "onboarding": {
+    "skip": "छोड़ें",
+    "next": "आगे",
+    "previous": "पीछे",
+    "start": "शुरू करें",
+    "welcome": {
+      "title": "Music Stream Match में आपका स्वागत है!",
+      "description": "म्यूजिक स्ट्रीमिंग सेवाओं के बीच अपनी पसंदीदा प्लेलिस्ट ट्रांसफर करने का सबसे आसान तरीका।"
+    },
+    "transfer": {
+      "title": "यह कैसे काम करता है",
+      "description": "प्लेलिस्ट ट्रांसफर करना सरल और तेज़ है:",
+      "feature1": "स्रोत सेवा और प्लेलिस्ट चुनें",
+      "feature2": "लक्ष्य स्ट्रीमिंग सेवा चुनें",
+      "feature3": "ट्रांसफर शुरू करें और पूरा होने तक प्रतीक्षा करें"
+    },
+    "providers": {
+      "title": "समर्थित सेवाएं",
+      "description": "इन लोकप्रिय स्ट्रीमिंग प्लेटफॉर्म के बीच प्लेलिस्ट ट्रांसफर करें:"
+    },
+    "invitation": {
+      "title": "निमंत्रण कोड आवश्यक",
+      "description": "ऐप का उपयोग करने के लिए आपको निमंत्रण कोड की आवश्यकता है। आप इसे व्यवस्थापक से प्राप्त कर सकते हैं या डेमो कोड का उपयोग कर सकते हैं।",
+      "demo": "डेमो कोड से आज़माएं:"
+    },
+    "ready": {
+      "title": "शुरू करने के लिए तैयार!",
+      "description": "अपना निमंत्रण कोड दर्ज करें और अपने संगीत संग्रह को ट्रांसफर करना शुरू करें।"
+    }
   }
 }
