--- a/src/i18n/translations/ko.json
+++ b/src/i18n/translations/ko.json
@@ -94,5 +94,35 @@
       "step4": "\"arl\"이라는 쿠키 찾기",
       "step5": "값 복사"
     }
+  },
+  "onboarding": {
+    "skip": "건너뛰기",
+    "next": "다음",
+    "previous": "이전",
+    "start": "시작하기",
+    "welcome": {
+      "title": "Music Stream Match에 오신 것을 환영합니다!",
+      "description": "음악 스트리밍 서비스 간에 좋아하는 플레이리스트를 전송하는 가장 쉬운 방법입니다."
+    },
+    "transfer": {
+      "title": "작동 방식",
+      "description": "플레이리스트 전송은 간단하고 빠릅니다:",
+      "feature1": "소스 서비스와 플레이리스트 선택",
+      "feature2": "대상 스트리밍 서비스 선택",
+      "feature3": "전송을 시작하고 완료를 기다립니다"
+    },
+    "providers": {
+      "title": "지원되는 서비스",
+      "description": "이 인기 스트리밍 플랫폼 간에 플레이리스트를 전송하세요:"
+    },
+    "invitation": {
+      "title": "초대 코드 필요",
+      "description": "앱을 사용하려면 초대 코드가 필요합니다. 관리자에게 받거나 데모 코드를 사용할 수 있습니다.",
+      "demo": "데모 코드로 시도해 보세요:"
+    },
+    "ready": {
+      "title": "시작할 준비가 되었습니다!",
+      "description": "초대 코드를 입력하고 음악 커렉션 전송을 시작하세요."
+    }
   }
 }
