--- a/src/i18n/translations/zh.json
+++ b/src/i18n/translations/zh.json
@@ -94,5 +94,35 @@
       "step4": "找到名为 \"arl\" 的 cookie",
       "step5": "复制其值"
     }
+  },
+  "onboarding": {
+    "skip": "跳过",
+    "next": "下一步",
+    "previous": "上一步",
+    "start": "开始使用",
+    "welcome": {
+      "title": "欢迎使用 Music Stream Match！",
+      "description": "在音乐流媒体服务之间转移您最喜爱的播放列表的最简单方式。"
+    },
+    "transfer": {
+      "title": "使用方法",
+      "description": "转移播放列表既简单又快速：",
+      "feature1": "选择源服务和播放列表",
+      "feature2": "选择目标流媒体服务",
+      "feature3": "开始转移并等待完成"
+    },
+    "providers": {
+      "title": "支持的服务",
+      "description": "在这些热门流媒体平台之间转移播放列表："
+    },
+    "invitation": {
+      "title": "需要邀请码",
+      "description": "要使用此应用，您需要邀请码。您可以从管理员处获取或使用演示代码。",
+      "demo": "使用演示代码试用："
+    },
+    "ready": {
+      "title": "准备就绪！",
+      "description": "输入您的邀请码，开始转移您的音乐收藏。"
+    }
   }
 }
