--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -124,5 +124,11 @@
       "title": "جاهز للبدء!",
       "description": "أدخل رمز الدعوة الخاص بك وابدأ في نقل مجموعاتك الموسيقية."
     }
+  },
+  "support": {
+    "button": "دعم",
+    "title": "ادعم المطور",
+    "description": "إذا أعجبك هذا التطبيق وتريد دعم تطويره، يمكنك فعل ذلك من خلال المنصات التالية:",
+    "thanks": "شكراً لدعمك! ❤️"
   }
 }
