--- a/src/i18n/translations/bn.json
+++ b/src/i18n/translations/bn.json
@@ -124,5 +124,11 @@
       "title": "শুরু করতে প্রস্তুত!",
       "description": "আপনার আমন্ত্রণ কোড দিন এবং আপনার সঙ্গীত সংগ্রহ স্থানান্তর করা শুরু করুন।"
     }
+  },
+  "support": {
+    "button": "সমর্থন",
+    "title": "লেখককে সমর্থন করুন",
+    "description": "আপনি যদি এই অ্যাপটি পছন্দ করেন এবং এর উন্নয়নকে সমর্থন করতে চান, তাহলে নিম্নলিখিত প্ল্যাটফর্মগুলির মাধ্যমে করতে পারেন:",
+    "thanks": "আপনার সমর্থনের জন্য ধন্যবাদ! ❤️"
   }
 }
