--- a/src/i18n/translations/hi.json
+++ b/src/i18n/translations/hi.json
@@ -124,5 +124,11 @@
       "title": "शुरू करने के लिए तैयार!",
       "description": "अपना निमंत्रण कोड दर्ज करें और अपने संगीत संग्रह को ट्रांसफर करना शुरू करें।"
     }
+  },
+  "support": {
+    "button": "समर्थन",
+    "title": "लेखक का समर्थन करें",
+    "description": "यदि आपको यह ऐप पसंद है और इसके विकास का समर्थन करना चाहते हैं, तो आप निम्नलिखित प्लेटफॉर्म के माध्यम से कर सकते हैं:",
+    "thanks": "आपके समर्थन के लिए धन्यवाद! ❤️"
   }
 }
