--- a/src/i18n/translations/ja.json
+++ b/src/i18n/translations/ja.json
@@ -124,5 +124,11 @@
       "title": "準備完了！",
       "description": "招待コードを入力して、音楽コレクションの転送を始めましょう。"
     }
+  },
+  "support": {
+    "button": "サポート",
+    "title": "作者をサポート",
+    "description": "このアプリが気に入って、開発をサポートしたい場合は、以下のプラットフォームから行えます：",
+    "thanks": "ご支援ありがとうございます！❤️"
   }
 }
