--- a/src/i18n/translations/ko.json
+++ b/src/i18n/translations/ko.json
@@ -124,5 +124,11 @@
       "title": "시작할 준비가 되었습니다!",
       "description": "초대 코드를 입력하고 음악 커렉션 전송을 시작하세요."
     }
+  },
+  "support": {
+    "button": "후원",
+    "title": "작성자 후원하기",
+    "description": "이 앱이 마음에 들고 개발을 후원하고 싶다면, 다음 플랫폼을 통해 할 수 있습니다:",
+    "thanks": "후원해 주셔서 감사합니다! ❤️"
   }
 }
