--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -124,5 +124,11 @@
       "title": "Готовы начать!",
       "description": "Введите код приглашения и начинайте перенос ваших музыкальных коллекций."
     }
+  },
+  "support": {
+    "button": "Поддержать",
+    "title": "Поддержать автора",
+    "description": "Если вам нравится это приложение и вы хотите поддержать его разработку, вы можете сделать это через следующие платформы:",
+    "thanks": "Спасибо за поддержку! ❤️"
   }
 }
