--- a/src/i18n/translations/zh.json
+++ b/src/i18n/translations/zh.json
@@ -124,5 +124,11 @@
       "title": "准备就绪！",
       "description": "输入您的邀请码，开始转移您的音乐收藏。"
     }
+  },
+  "support": {
+    "button": "支持",
+    "title": "支持作者",
+    "description": "如果您喜欢这个应用并想支持其开发，您可以通过以下平台进行：",
+    "thanks": "感谢您的支持！❤️"
   }
 }
