Loading playlist view

--- a/src/i18n/translations/ar.json
+++ b/src/i18n/translations/ar.json
@@ -47,6 +47,11 @@
     "playlistExistsHint": "ستتم إضافة الأغاني إلى قائمة التشغيل الموجودة ({{count}} أغنية)",
     "allowDuplicates": "السماح بالأغاني المكررة",
     "startImport": "بدء الاستيراد",
+    "loadingPlaylist": "جاري تحميل قائمة التشغيل المصدر...",
+    "loadingPlaylistHint": "جاري جلب الأغاني من {{provider}}",
+    "loadingTracks": "جاري تحميل الأغاني",
+    "loadedTracks": "تم تحميل {{count}} من {{total}} أغنية",
+    "preparingImport": "جاري التحضير للاستيراد...",
     "importing": "جاري استيراد قائمة التشغيل...",
     "transferringTracks": "جاري نقل الأغاني إلى الخدمة الهدف",
     "imported": "تم الاستيراد",
