--- a/src/i18n/translations/bn.json
+++ b/src/i18n/translations/bn.json
@@ -46,8 +46,11 @@
     "playlistExists": "এই নামে একটি প্লেলিস্ট ইতিমধ্যে বিদ্যমান",
     "playlistExistsHint": "গানগুলি বিদ্যমান প্লেলিস্টে যোগ করা হবে ({{count}} গান)",
     "allowDuplicates": "ডুপ্লিকেট গানের অনুমতি দিন",
-    "startImport": "আমদানি শুরু করুন",
-    "importing": "প্লেলিস্ট আমদানি হচ্ছে...",
+    "startImport": "আমদানি শুরু করুন",    "loadingPlaylist": "উৎস প্লেলিস্ট লোড হচ্ছে...",
+    "loadingPlaylistHint": "{{provider}} থেকে গান প্রাপ্ত হচ্ছে",
+    "loadingTracks": "গান লোড হচ্ছে",
+    "loadedTracks": "{{total}} টির মধ্যে {{count}} টি গান লোড হয়েছে",
+    "preparingImport": "আমদানির জন্য প্রস্তুত হচ্ছে...",    "importing": "প্লেলিস্ট আমদানি হচ্ছে...",
     "transferringTracks": "লক্ষ্য পরিষেবায় গান স্থানান্তর হচ্ছে",
     "imported": "আমদানিকৃত",
     "skipped": "বাদ দেওয়া",
