--- a/src/i18n/translations/de.json
+++ b/src/i18n/translations/de.json
@@ -47,6 +47,11 @@
     "playlistExistsHint": "Songs werden zur bestehenden Playlist hinzugefügt ({{count}} Songs)",
     "allowDuplicates": "Duplikate erlauben",
     "startImport": "Import starten",
+    "loadingPlaylist": "Quell-Playlist wird geladen...",
+    "loadingPlaylistHint": "Songs werden von {{provider}} abgerufen",
+    "loadingTracks": "Songs werden geladen",
+    "loadedTracks": "{{count}} von {{total}} Songs geladen",
+    "preparingImport": "Import wird vorbereitet...",
     "importing": "Playlist wird importiert...",
     "transferringTracks": "Songs werden zum Zieldienst übertragen",
     "imported": "Importiert",
