--- a/src/i18n/translations/en.json
+++ b/src/i18n/translations/en.json
@@ -47,6 +47,11 @@
     "playlistExistsHint": "Tracks will be added to the existing playlist ({{count}} tracks)",
     "allowDuplicates": "Allow duplicate tracks",
     "startImport": "Start import",
+    "loadingPlaylist": "Loading source playlist...",
+    "loadingPlaylistHint": "Fetching tracks from {{provider}}",
+    "loadingTracks": "Loading tracks",
+    "loadedTracks": "Loaded {{count}} of {{total}} tracks",
+    "preparingImport": "Preparing import...",
     "importing": "Importing playlist...",
     "transferringTracks": "Transferring tracks to target service",
     "imported": "Imported",
