--- a/src/i18n/translations/es.json
+++ b/src/i18n/translations/es.json
@@ -47,6 +47,11 @@
     "playlistExistsHint": "Las canciones se añadirán a la lista existente ({{count}} canciones)",
     "allowDuplicates": "Permitir canciones duplicadas",
     "startImport": "Iniciar importación",
+    "loadingPlaylist": "Cargando lista de origen...",
+    "loadingPlaylistHint": "Obteniendo canciones de {{provider}}",
+    "loadingTracks": "Cargando canciones",
+    "loadedTracks": "Cargadas {{count}} de {{total}} canciones",
+    "preparingImport": "Preparando importación...",
     "importing": "Importando lista de reproducción...",
     "transferringTracks": "Transfiriendo canciones al servicio de destino",
     "imported": "Importadas",
