--- a/src/i18n/translations/fr.json
+++ b/src/i18n/translations/fr.json
@@ -47,6 +47,11 @@
     "playlistExistsHint": "Les titres seront ajoutés à la playlist existante ({{count}} titres)",
     "allowDuplicates": "Autoriser les doublons",
     "startImport": "Démarrer l'import",
+    "loadingPlaylist": "Chargement de la playlist source...",
+    "loadingPlaylistHint": "Récupération des titres depuis {{provider}}",
+    "loadingTracks": "Chargement des titres",
+    "loadedTracks": "{{count}} sur {{total}} titres chargés",
+    "preparingImport": "Préparation de l'import...",
     "importing": "Import de la playlist en cours...",
     "transferringTracks": "Transfert des titres vers le service cible",
     "imported": "Importés",
