--- a/src/i18n/translations/hi.json
+++ b/src/i18n/translations/hi.json
@@ -47,6 +47,11 @@
     "playlistExistsHint": "गाने मौजूदा प्लेलिस्ट में जोड़े जाएंगे ({{count}} गाने)",
     "allowDuplicates": "डुप्लिकेट गानों की अनुमति दें",
     "startImport": "आयात शुरू करें",
+    "loadingPlaylist": "स्रोत प्लेलिस्ट लोड हो रही है...",
+    "loadingPlaylistHint": "{{provider}} से गाने प्राप्त कर रहे हैं",
+    "loadingTracks": "गाने लोड हो रहे हैं",
+    "loadedTracks": "{{total}} में से {{count}} गाने लोड हुए",
+    "preparingImport": "आयात की तैयारी हो रही है...",
     "importing": "प्लेलिस्ट आयात हो रही है...",
     "transferringTracks": "गाने लक्ष्य सेवा में ट्रांसफर हो रहे हैं",
     "imported": "आयातित",
