--- a/src/i18n/translations/it.json
+++ b/src/i18n/translations/it.json
@@ -47,6 +47,11 @@
     "playlistExistsHint": "I brani verranno aggiunti alla playlist esistente ({{count}} brani)",
     "allowDuplicates": "Consenti brani duplicati",
     "startImport": "Avvia importazione",
+    "loadingPlaylist": "Caricamento playlist di origine...",
+    "loadingPlaylistHint": "Recupero brani da {{provider}}",
+    "loadingTracks": "Caricamento brani",
+    "loadedTracks": "Caricati {{count}} di {{total}} brani",
+    "preparingImport": "Preparazione importazione...",
     "importing": "Importazione playlist in corso...",
     "transferringTracks": "Trasferimento brani al servizio di destinazione",
     "imported": "Importati",
