--- a/src/i18n/translations/ja.json
+++ b/src/i18n/translations/ja.json
@@ -47,6 +47,11 @@
     "playlistExistsHint": "曲は既存のプレイリストに追加されます（{{count}} 曲）",
     "allowDuplicates": "重複曲を許可",
     "startImport": "インポート開始",
+    "loadingPlaylist": "ソースプレイリストを読み込み中...",
+    "loadingPlaylistHint": "{{provider}}から曲を取得中",
+    "loadingTracks": "曲を読み込み中",
+    "loadedTracks": "{{total}}曲中{{count}}曲を読み込みました",
+    "preparingImport": "インポートを準備中...",
     "importing": "プレイリストをインポート中...",
     "transferringTracks": "ターゲットサービスに曲を転送中",
     "imported": "インポート済み",
