--- a/src/i18n/translations/ko.json
+++ b/src/i18n/translations/ko.json
@@ -47,6 +47,11 @@
     "playlistExistsHint": "곡이 기존 플레이리스트에 추가됩니다 ({{count}}곡)",
     "allowDuplicates": "중복 곡 허용",
     "startImport": "가져오기 시작",
+    "loadingPlaylist": "소스 플레이리스트 로딩 중...",
+    "loadingPlaylistHint": "{{provider}}에서 곡 가져오는 중",
+    "loadingTracks": "곡 로딩 중",
+    "loadedTracks": "{{total}}곡 중 {{count}}곡 로드됨",
+    "preparingImport": "가져오기 준비 중...",
     "importing": "플레이리스트 가져오는 중...",
     "transferringTracks": "대상 서비스로 곡 전송 중",
     "imported": "가져옴",
