--- a/src/i18n/translations/pl.json
+++ b/src/i18n/translations/pl.json
@@ -47,6 +47,11 @@
     "playlistExistsHint": "Utwory zostaną dodane do istniejącej playlisty ({{count}} utworów)",
     "allowDuplicates": "Pozwól na duplikaty utworów",
     "startImport": "Rozpocznij import",
+    "loadingPlaylist": "Wczytywanie playlisty źródłowej...",
+    "loadingPlaylistHint": "Pobieranie utworów z {{provider}}",
+    "loadingTracks": "Wczytywanie utworów",
+    "loadedTracks": "Wczytano {{count}} z {{total}} utworów",
+    "preparingImport": "Przygotowywanie importu...",
     "importing": "Importowanie playlisty...",
     "transferringTracks": "Przenoszenie utworów do docelowego serwisu",
     "imported": "Zaimportowane",
