--- a/src/i18n/translations/pt.json
+++ b/src/i18n/translations/pt.json
@@ -47,6 +47,11 @@
     "playlistExistsHint": "As músicas serão adicionadas à playlist existente ({{count}} músicas)",
     "allowDuplicates": "Permitir músicas duplicadas",
     "startImport": "Iniciar importação",
+    "loadingPlaylist": "Carregando playlist de origem...",
+    "loadingPlaylistHint": "Buscando músicas de {{provider}}",
+    "loadingTracks": "Carregando músicas",
+    "loadedTracks": "Carregadas {{count}} de {{total}} músicas",
+    "preparingImport": "Preparando importação...",
     "importing": "Importando playlist...",
     "transferringTracks": "Transferindo músicas para o serviço de destino",
     "imported": "Importadas",
