--- a/src/i18n/translations/ru.json
+++ b/src/i18n/translations/ru.json
@@ -47,6 +47,11 @@
     "playlistExistsHint": "Треки будут добавлены в существующий плейлист ({{count}} треков)",
     "allowDuplicates": "Разрешить дубликаты треков",
     "startImport": "Начать импорт",
+    "loadingPlaylist": "Загрузка исходного плейлиста...",
+    "loadingPlaylistHint": "Получение треков из {{provider}}",
+    "loadingTracks": "Загрузка треков",
+    "loadedTracks": "Загружено {{count}} из {{total}} треков",
+    "preparingImport": "Подготовка импорта...",
     "importing": "Импорт плейлиста...",
     "transferringTracks": "Перенос треков в целевой сервис",
     "imported": "Импортировано",
