--- a/src/i18n/translations/tr.json
+++ b/src/i18n/translations/tr.json
@@ -47,6 +47,11 @@
     "playlistExistsHint": "Şarkılar mevcut çalma listesine eklenecek ({{count}} şarkı)",
     "allowDuplicates": "Yinelenen şarkılara izin ver",
     "startImport": "İçe aktarmayı başlat",
+    "loadingPlaylist": "Kaynak çalma listesi yükleniyor...",
+    "loadingPlaylistHint": "{{provider}} üzerinden şarkılar alınıyor",
+    "loadingTracks": "Şarkılar yükleniyor",
+    "loadedTracks": "{{total}} şarkıdan {{count}} tanesi yüklendi",
+    "preparingImport": "İçe aktarma hazırlanıyor...",
     "importing": "Çalma listesi içe aktarılıyor...",
     "transferringTracks": "Şarkılar hedef servise aktarılıyor",
     "imported": "İçe aktarıldı",
