--- a/src/i18n/translations/vi.json
+++ b/src/i18n/translations/vi.json
@@ -47,6 +47,11 @@
     "playlistExistsHint": "Bài hát sẽ được thêm vào playlist hiện có ({{count}} bài hát)",
     "allowDuplicates": "Cho phép bài hát trùng lặp",
     "startImport": "Bắt đầu nhập",
+    "loadingPlaylist": "Đang tải playlist nguồn...",
+    "loadingPlaylistHint": "Đang lấy bài hát từ {{provider}}",
+    "loadingTracks": "Đang tải bài hát",
+    "loadedTracks": "Đã tải {{count}} / {{total}} bài hát",
+    "preparingImport": "Đang chuẩn bị nhập...",
     "importing": "Đang nhập playlist...",
     "transferringTracks": "Đang chuyển bài hát đến dịch vụ đích",
     "imported": "Đã nhập",
