--- a/src/i18n/translations/zh.json
+++ b/src/i18n/translations/zh.json
@@ -47,6 +47,11 @@
     "playlistExistsHint": "歌曲将添加到现有播放列表 ({{count}} 首歌曲)",
     "allowDuplicates": "允许重复歌曲",
     "startImport": "开始导入",
+    "loadingPlaylist": "正在加载来源播放列表...",
+    "loadingPlaylistHint": "正在从 {{provider}} 获取歌曲",
+    "loadingTracks": "正在加载歌曲",
+    "loadedTracks": "已加载 {{count}} / {{total}} 首歌曲",
+    "preparingImport": "正在准备导入...",
     "importing": "正在导入播放列表...",
     "transferringTracks": "正在将歌曲转移到目标服务",
     "imported": "已导入",
